feat(services): update a service
