# api/src/models/service.model.go
@@ -24,6 +24,15 @@ type ServiceCreateInput struct {
 	PositionY   float32 `json:"positionY" validate:"required"`
 }
 
+type ServiceUpdateInput struct {
+	DockerImage string  `json:"dockerImage"`
+	DockerTag   string  `json:"dockerTag"`
+	Entrypoint  string  `json:"entrypoint"`
+	Description string  `json:"description"`
+	PositionX   float32 `json:"positionX"`
+	PositionY   float32 `json:"positionY"`
+}
+
 type ServiceResponse struct {
 	ID          *uuid.UUID `json:"id"`
 	DockerImage string     `json:"dockerImage"`
